--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno por desarrollo
-configuracion.autor.nombre=SveinNavarro
-configuracion.autor.correo=svn@ludencompany.com
+configuracion.texto=Configurando entorno por desarrollo para Jhon Doe
+configuracion.autor.nombre=Jhon Doe
+configuracion.autor.correo=jhon.doe@ludencompany.com
