fix driver postgresql

--- a/servicio-usuario-dev.properties
+++ b/servicio-usuario-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo_microservicios_1
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgreSQL.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSql95Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
