--- a/servicio-producto-dev.properties
+++ b/servicio-producto-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/demo_microservicios_1?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Mexico_City
+spring.datasource.url=jdbc:mysql://docker-mysql8-demo-microservicios1:3306/demo_microservicios_1?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Mexico_City
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
