--- a/servicio-usuario-dev.properties
+++ b/servicio-usuario-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo_microservicios_1
+spring.datasource.url=jdbc:postgresql://docker-postgres-demo-microservicios1:5432/demo_microservicios_1
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
