config docker host RabbitMQ y Zipkin

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,9 @@
+#COMMON FILE PARA TODOS LOS SERVICIOS
 config.security.oauth.client.id=frontEndApp
 config.security.oauth.client.secret=contrasena
 config.security.oauth.jwt.key=codigo-secreto-en-zuul
+
+spring.zipkin.base-url=http://docker-zipkin-server:9411/
+spring.zipkin.sender.type=rabbit
+
+spring.rabbitmq.host=docker-rabbitmq-demo-ms1
